fix: display overflow on mobile

--- a/src/ducks/upload/styles.styl
+++ b/src/ducks/upload/styles.styl
@@ -7,6 +7,7 @@
     right    em(24px)
     height   em(210px)
     width    em(480px)
+    max-width 90%
     border   1px solid grey-09
     border-radius    4px
     background-color white
@@ -15,7 +16,7 @@
     transition       0.5s
     opacity          0
     visibility       hidden
-    transform        translate(300px)
+    transform        translateY(300px)
 
 .upload-queue--visible
     opacity    1
